--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.7.0"
   },
   "dependencies": {
     "hexo": "^3.7.0",
@@ -26,6 +26,7 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^0.2.0",
+    "hexo-translate-title": "^1.0.10",
     "hexo-wordcount": "^3.0.2",
     "lunr": "github:mamboer/lunr.js",
     "moment": "^2.22.0",
