--- a/package.json
+++ b/package.json
@@ -3,34 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.0"
+    "version": ""
   },
   "dependencies": {
     "hexo": "^3.7.0",
-    "hexo-admin": "^2.3.0",
-    "hexo-autoprefixer": "^1.0.0",
-    "hexo-filter-cleanup": "^1.1.0",
-    "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-baidu-sitemap": "^0.1.2",
+    "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
-    "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.0",
-    "hexo-generator-json-content": "^3.0.1",
-    "hexo-generator-sitemap": "^1.2.0",
+    "hexo-generator-index": "^0.2.1",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-helper-qrcode": "^1.0.2",
-    "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-less": "^0.2.0",
-    "hexo-renderer-marked": "^0.3.0",
-    "hexo-renderer-sass": "^0.3.2",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-renderer-swig": "^1.1.0",
-    "hexo-server": "^0.2.0",
-    "hexo-translate-title": "^1.0.10",
-    "hexo-wordcount": "^3.0.2",
-    "lunr": "github:mamboer/lunr.js",
-    "moment": "^2.22.0",
-    "node-sass": "^4.8.3",
-    "object-assign": "^4.1.1"
+    "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-renderer-marked": "^0.3.2",
+    "hexo-server": "^0.3.1"
   }
 }
