--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,11 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
+feed:
+    type: atom
+    path: atom.xml
+    limit: 20
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
