--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,11 @@
 title: 追赶日落日出
 subtitle:
 description: code farmer.
-keywords:
+keywords: helingfeng,larvel,php,linux,chester
 author: Chester-He
 language: zh-Hans
-timezone:
+timezone: Asia/Shanghai
+favicon: https://assets-cdn.github.com/favicon.ico
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -71,7 +72,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Extensions
