Changed: 更新 blog

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: replica-next
+theme: sky
 
 translate_title:
   translate_way: baidu
