--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: sky
+theme: landscape
 
 translate_title:
   translate_way: baidu
