feat(Theme): config

--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,6 @@ email: dreamhelingfeng@gmail.com
 
 avatar: https://avatars1.githubusercontent.com/u/4921878?s=460&v=4
 social:
-  github: https://github.com/Chester-Hee
+  github: https://github.com/helingfeng
   weibo:
   linkedin:
