feat(Theme): config

--- a/themes/noise/_config.yml
+++ b/themes/noise/_config.yml
@@ -9,7 +9,7 @@ social:
   email: dreamhelingfeng@gmail.com
   twitter:
   weibo:
-  github: https://github.com/helingfeng
+  github: helingfeng
   googleplus:
   rss: /atom.xml
 
