--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: 追赶日落日出
-subtitle:
+subtitle: 何凌枫
 description: code farmer.
-keywords: helingfeng,larvel,php,linux,chester
+keywords: helingfeng,何凌枫,laravel,php,linux
 author: Chester-He
 language: zh-Hans
 timezone: Asia/Shanghai
