--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 title: 追赶日落日出
 subtitle: 何凌枫
 description: code farmer.
-keywords: helingfeng,何凌枫,laravel,php,linux
-author: Chester-He
+keywords: helingfeng,何凌枫,Laravel,PHP,Linux
+author: helingfeng
 language: zh-Hans
 timezone: Asia/Shanghai
 favicon: https://assets-cdn.github.com/favicon.ico
@@ -15,7 +15,7 @@ favicon: https://assets-cdn.github.com/favicon.ico
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://www.helingfeng.com
+url: https://xuehui.我爱你
 root: /
 permalink: :year-:month-:day/:translate_title/
 permalink_defaults:
@@ -59,7 +59,7 @@ index_generator:
   path: ''
   per_page: 5
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
